# SafeGuard-Navigator

./: .eslintrc.json  .gitignore  DATA_DOWNLOAD_INSTRUCTIONS.md  DEVELOPMENT_SETUP.md  Dockerfile.frontend  ENHANCEMENT_PLAN.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_README.md  OSRM_SETUP.md  QWEN.md  README-FIXES.md  README.md  SCRIPTS_GUIDE.md  SolutionDocument.md  TROUBLESHOOTING.md  UPDATES_SUMMARY.md  check-services.bat  diagnose-services.bat  diagnose-services.sh  docker-compose.yml  i18n.ts  install-osrm-deps.bat  middleware.ts  next.config.ts  package-lock.json  package.json  quick-start.bat  setup-assistant.bat  setup-osrm.bat  setup-osrm.sh  start-all.bat  start-backend.bat  start-backend.sh  start-db.bat  stop-all.bat  test_frontend.py  test_geocoding.py  test_geocoding_api.py
backend/: Dockerfile  README.md  check_and_cleanup.py  chennai.osm.pbf  cleanup_db.py  final_cleanup.py  init_db.py  init_db_tables.py  main.py  migrate_db.py  pyproject.toml  requirements.txt  reset_db.py  service_status_api.py  setup-osrm.bat  start-backend-no-deps.bat  start-backend.bat  test_db.py  test_db_connection.py  verify_db.py
backend/app/api/: __init__.py  api.py  auth.py  data_ingestion.py  deps.py  emergency.py  geocoding.py  predictions.py  reputation.py  routing.py  safety.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/crud/: __init__.py  report.py  user.py
backend/app/db/: __init__.py  session.py  utils.py
backend/app/models/: __init__.py  models.py  user.py  (+1 more)
backend/safetrouterroute_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+166 files in other folders)
