[project]
name = "safetrouterroute-backend"
version = "1.0.0"
description = "Backend services for SafeRoute - AI-Driven Public Safety Navigation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    
    # Database
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    
    # Authentication
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    
    # Data processing
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "numpy>=1.24.0",
    "pandas>=2.2.3",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.4.2",
    
    # OSRM integration
    "osrmcpy>=0.1.0",
    "Pillow>=10.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
]